--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,12 @@
-version: '3'
+version: "3.1"
 
 services:
   db:
     container_name: ecommerce_postgres_db
-    image: 'postgres:latest'
+    image: "postgres:15.1"
     volumes:
-      - ./db:/var/lib/postgresql/data
+      - ./data:/var/lib/postgresql/data
     env_file:
       - .postgres_env
     ports:
       - 5432:5432
-    
